# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  requirements.txt
.github/workflows/: ruff.yml
page_analyzer/: app.py  db.py  parser.py  utils.py  validators.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
