[project]
name = "hexlet-code"
version = "0.1.0"
description = "Анализатор страниц"
authors = [
    { name = "HidTired", email = "DenTanyaBonya@mail.ru" },
]

dependencies = [
    "Flask==3.0.3",
    "python-dotenv==1.0.1", 
    "psycopg2-binary==2.9.9",  # ← psycopg2-binary РАБОТАЕТ на Python 3.13
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
    "gunicorn==23.0.0"
]

dependency-groups.dev = [
    "pytest",
    "playwright==1.54.0",
    "psycopg2-binary==2.9.9"  # ← Для conftest.py
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]